fixup! Spark 3.5: Add query runner in test module